--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="images/navicon.svg" alt="">
         </aside>
         <h1>Poster shop</h1>
-        <img src="images/ninjahead.svg" alt="">
+        <img src="images/ninjahead.svg" alt="" class="ninja-head">
     </header>
     <main>
         <div class="wrapper">
